new changes made

--- a/hello1.html
+++ b/hello1.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello guyzz</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, sequi.
-    </p>
-    <span>create my own style</span>
+    <div>my new file</div>
+    <p>lets do something new</p>
 </body>
 </html>
